EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==06/30/2009==
Derision: Fix for mobs in pathing enabled zones fleeing at low health at full run speed.
Derision: Made rule Map:UseClosestZ default to false. Only set true if using azone2 generated maps (specifically those for EQG zones).
realityincarnate: Starting cities are now tracked for newly created characters.
realityincarnate: Enabled the /setstartcity command for characters without a start city assigned.
realityincarnate: Added $client->SetStartZone and $client->GetStartZone perl commands. 
KLS: Petitions will assign id based on character id instead of this stupid desyncing junk.
KLS: Max NPC name length increased to 50 characters up from 30.
KLS: Save on zone success will now commit immediately instead of possibly delaying. Hopefully will help with some of the situations where people zone to bad locations.
gaeorn: New rule NPC:SmartLastFightingDelayMoving. When true (default), if a mob is already wandering home during a FD pull and the puller stands up and then FD again, the mob's timer to return home will not reset, but instead will return home immediately. The timer will be reset if the mob forgets about the FD puller.
gaeorn: New rule Combat:AssistNoTargetSelf. When assisting a target without a target: true = target self (default), false = leave target as was before assist (this is the behavior on live).

Optional SQL:

utils/sql/svn/730_smart_delay_moving.sql
utils/sql/svn/731_rule_assist_notarget_self.sql

==06/29/2009==
Derision: Fixed a pathing bug relating to nodes incorrectly culled from the front of a path.
KLS: Reworked bind code a bit.
KLS: Pets no longer get client war/berserker crit bonuses.

==06/28/2009==
Derision: Began work on pathfinding for aggro/fear and Find NPC.

The path files for the first few zones can be found at http://code.google.com/p/projecteqemu/downloads/list