@@ -198,8 +198,11 @@ RULE_INT ( Spells, BaseCritRatio, 100) //base % bonus to damage on a successful 
 RULE_INT ( Spells, WizCritLevel, 12) //level wizards first get spell crits
 RULE_INT ( Spells, WizCritChance, 7) //wiz's crit chance, on top of BaseCritChance
 RULE_INT ( Spells, WizCritRatio, 0) //wiz's crit bonus, on top of BaseCritRatio (should be 0 for Live-like)
-RULE_INT (Spells, ResistPerLevelDiff, 85) //8.5 resist per level difference.
-RULE_INT (Spells, TranslocateTimeLimit, 0) // If not zero, time in seconds to accept a Translocate.
+RULE_INT ( Spells, ResistPerLevelDiff, 85) //8.5 resist per level difference.
+RULE_INT ( Spells, TranslocateTimeLimit, 0) // If not zero, time in seconds to accept a Translocate.
+RULE_INT ( Spells, SacrificeMinLevel, 46)	//first level Sacrifice will work on
+RULE_INT ( Spells, SacrificeMaxLevel, 69)	//last level Sacrifice will work on
+RULE_INT ( Spells, SacrificeItemID, 9963)	//Item ID of the item Sacrifice will return (defaults to an EE)
 RULE_CATEGORY_END()
 
 RULE_CATEGORY( Combat )
