@@ -1,0 +1,3 @@
+INSERT INTO `rule_values` VALUES ('1', 'Spells:SacrificeMinLevel', '46', 'First level Sacrifice will work on');
+INSERT INTO `rule_values` VALUES ('1', 'Spells:SacrificeMaxLevel', '69', 'Last level Sacrifice will work on');
+INSERT INTO `rule_values` VALUES ('1', 'Spells:SacrificeItemID', '9963', 'Item ID of the item Sacrifice will return. Defaults to an Essence Emerald.');
