@@ -102,6 +102,9 @@ public:
 	~PetitionList() {}
 	void AddPetition(Petition* pet);
 	Petition* GetPetitionByID(int32 id_in);
+	int32	GetMaxPetitionID() { return last_insert_id; }
+	int32	GetNextPetitionID() { return last_insert_id++; }
+	void	SetMaxPetitionID(int32 m_new_last) { last_insert_id = m_new_last; }
 	int32	GetTotalPetitions();
 	void ClearPetitions();
 	void ReadDatabase();
